<resources>
    <string name="app_name">Индикатор клиента</string>
    <string name="action_settings">Настройки системы</string>
    <string name="bt_settings">Настройки системы</string>
    <string name="title_activity_setup_bt">Выберите устройство</string>
    <string name="title_setting_activity">Настройки приложения</string>
    <string name="CloseButtonBTSetting">Закрыть и повторить подключение</string>
    <string name="preferenceScreen">preferenceScreen</string>

    <string name="resonance">"Copyright ЧАО \"Резонанс\" http://www.ekka.com.ua/"</string>

    <string name="connect_to_server">Підключення до сервера</string>
    <string name="get_data_img">Перевірка файлiв зображень...</string>
    <string name="get_data_video">Перевірка вiдео файлiв...</string>
    <string name="get_data_slide">Перевірка слайд-файлiв...</string>
    <string name="get_data_screenFiles">Перевірка файлiв фонових зображень...</string>
    <string name="try_connect_to_source">Перевiрка вмісту файлового ресурсу...</string>

    <string-array name="entriesSpeed">
        <item>9600</item>
        <item>19200</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string-array name="entriesStopBits">
        <item>"1"</item>
        <item>"1.5"</item>
        <item>"2"</item>
    </string-array>

    <string-array name="entriesParity">
        <item>"NONE"</item>
        <item>"ODD"</item>
        <item>"EVEN"</item>
    </string-array>

    <string name="title_activity_slide_view">SlideViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content"></string>

    <string name="title_activity_video">VideoActivity</string>

    <string name="number_sign">№</string>
    <string name="product_name">Найменування</string>
    <string name="amount">Кiлькiсть</string>
    <string name="price">Цiна</string>
    <string name="sum">Сума</string>
    <string name="discount">Знижка</string>
    <string name="to_pay">До сплати</string>
    <string name="total_products">Всього товарiв:  </string>
    <string name="to_pay_colon">До сплати:  </string>
    <string name="total">Разом</string>

    <string name="kind_of_service">Вид послуги</string>
    <string name="trip_count">Кількість поїздок</string>
    <string name="cost">Вартiсть</string>
    <string name="card_default">Картка\u000A№ 000000000000</string>
    <string name="card_num">Картка\u000A№\u0020</string>
    <string name="card_balance_num">Баланс картки\u000A№\u0020</string>
    <string name="card_mask">000000000000</string>
    <string name="unlimited">без ліміту</string>

    <string name="tools_dummy_4">1234</string>
    <string name="tools_dummy_5_dot_2">123.45</string>
    <string name="tools_dummy_6_dot_3">123.456</string>
    <string name="tools_dummy_6_dot_2">1234.56</string>
    <string name="tools_dummy_8_dot_2">123456.78</string>
    <string name="tools_dummy_10_dot_2">12345678.90</string>

</resources>
