<?xml version="1.0" encoding="utf-8"?>

<!-- Look for DMart shop in Dnepr -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="94125"
        android:orientation="horizontal"
        tools:background="@color/white">

        <!--       dummy, for compability only, must be in another layout_shopping_list_look_x.xml (visibility = gone) -->
        <ImageView
            android:id="@+id/imageview_product"
            android:layout_width="400dp"
            android:layout_height="500dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/list_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4256"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/number_sign"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3"
                    android:gravity="center"
                    android:text="@string/product_name"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sum"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/discount"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/to_pay"
                    android:textColor="@color/list_header_text_look_1"
                    android:textSize="@dimen/list_header_text_look_1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_list_header_underline"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_item_divider_look_1" />

            <ListView
                android:id="@+id/listview_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="95744"
                android:choiceMode="singleChoice"
                android:clickable="true"
                tools:listitem="@layout/list_item_look_1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5875"
        android:gravity="bottom|end"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <!--       dummy, for compability only, must be in another layout_shopping_list_look_x.xml (visibility = gone) -->
        <TextView
            android:id="@+id/textview_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textview_total_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_look_1" />

        <TextView
            android:id="@+id/textview_total_sum_without_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_num_look_1"
            android:textStyle="bold"
            tools:text="@string/tools_dummy_10_dot_2" />

        <TextView
            android:id="@+id/textview_discount_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/discount"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_look_1" />

        <TextView
            android:id="@+id/textview_total_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_num_look_1"
            android:textStyle="bold"
            tools:text="@string/tools_dummy_10_dot_2" />

        <TextView
            android:id="@+id/textview_to_pay_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/to_pay"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_look_1" />

        <TextView
            android:id="@+id/textview_total_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_num_look_1"
            android:textStyle="bold"
            tools:text="@string/tools_dummy_10_dot_2" />

    </LinearLayout>
</LinearLayout>