<?xml version="1.0" encoding="utf-8"?>

<!-- Look for american shop in Dnepr -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/idLay1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/idLayTotalSumm"
        android:layout_weight="946"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTovar"
            android:layout_width="400px"
            android:layout_height="500dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/noimagefound"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/table_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="43"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_npp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/number_sign"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/product_name"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/amount"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/price"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sum"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />

                <TextView
                    android:id="@+id/textview_discount"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/discount"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />

                <TextView
                    android:id="@+id/textview_to_pay"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/to_pay"
                    android:textColor="@color/color_text_table_header_look_1"
                    android:textSize="@dimen/text_table_header_look_1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_table_header_underline"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorBlack" />

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="957"
                android:choiceMode="singleChoice"
                android:clickable="true"></ListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/idLayTotalSumm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="54"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotTov"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="clip_vertical"
            android:text="@string/total_products"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_TotalCount"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="999"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="clip_vertical"
            android:text="@string/to_pay"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_TotalSumm"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="9999.99"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>