<?xml version="1.0" encoding="utf-8"?>

<!-- Look for Metro (Kiev subway) -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8413"
        android:orientation="horizontal">

        <!--       dummy, for compability only, must be in another layout_shopping_list_look_x.xml (visibility = gone) -->
        <ImageView
            android:id="@+id/imageview_product"
            android:layout_width="400dp"
            android:layout_height="500dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/list_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5557"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/number_sign"
                    android:textColor="@color/list_header_text_look_2"
                    android:textSize="@dimen/list_header_text_look_2" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/product_name"
                    android:textColor="@color/list_header_text_look_2"
                    android:textSize="@dimen/list_header_text_look_2" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/amount"
                    android:textColor="@color/list_header_text_look_2"
                    android:textSize="@dimen/list_header_text_look_2" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/price"
                    android:textColor="@color/list_header_text_look_2"
                    android:textSize="@dimen/list_header_text_look_2" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sum"
                    android:textColor="@color/list_header_text_look_2"
                    android:textSize="@dimen/list_header_text_look_2" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_list_header_underline"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_item_divider_look_2" />

            <ListView
                android:id="@+id/listview_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="94443"
                android:choiceMode="singleChoice"
                android:clickable="true"
                tools:listitem="@layout/list_item_look_2" />

        </LinearLayout>
    </LinearLayout>

    <!-- height must be 130px for 1280x800 screen (130/800 = 0.1625) -->
    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1587"
        android:orientation="horizontal">

        <!--    dummy, for compability only, must be in another layout_shopping_list_look_x.xml (visibility = gone) -->
        <TextView
            android:id="@+id/textview_total_discount"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <!--     dummy, for compability only, must be in another layout_shopping_list_look_x.xml (visibility = gone) -->
        <TextView
            android:id="@+id/textview_total_sum_without_discount"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textview_total_products"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="clip_vertical"
            android:text="@string/total_products"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/total_text_look_2"/>

        <TextView
            android:id="@+id/textview_total_count"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="999"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_num_look_2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_to_pay"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="clip_vertical"
            android:text="@string/to_pay_colon"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_look_2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_total_sum"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="9999.99"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/total_text_num_look_2"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>